# CoMaPOI

./: .gitignore  config.py  finetune_sft_new.py  inference_forward_new.py  inference_inverse_new.py  main.py  pyproject.toml  utils.py  utils_copy.py
script/: __init__.py  check_openai_endpoint.py  local_smoke_test.py  prepare_dataset_layout.py
