[project]
name = "comapoi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.20.3",
    "agentscope>=0.1.0",
    "bitsandbytes>=0.41.0",
    "faiss-cpu>=1.7.4",
    "jsonlines>=3.1.0",
    "loguru>=0.7.0",
    "numpy>=1.24.3",
    "openai>=1.1.0",
    "pandas>=1.5.3",
    "peft>=0.4.0",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.1",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "trl>=0.7.1",
]
